# learn-user-auth

./: .gitignore  pyproject.toml
app/: main.py
app/api/: auth.py
app/core/: config.py  database.py  exceptions.py  security.py
app/models/: user.py
app/schemas/: auth.py
app/services/: auth_service.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: style.css
frontend/src/layout/: Layout.vue
frontend/src/layout/components/: Header.vue  Sidebar.vue
frontend/src/router/: index.ts  routes.ts
frontend/src/router/middleware/: authMiddleware.ts  dataMiddleware.ts  index.ts  loginMiddleware.ts
frontend/src/router/modules/: home.ts
frontend/src/views/login/: LoginView.vue
frontend/src/views/status/: NotFoundView.vue  UnauthorizedView.vue
